hive-db/tests/typesafety/transaction_insert.stderr
error[E0308]: `?` operator has incompatible types
  --> tests/typesafety/transaction_insert.rs:15:38
   |
15 |         let previous: Option<bool> = tree.b_insert(&my_key, &correct_data)?;
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `bool`, found `u8`
   |
   = note: `?` operator cannot convert from `Option<u8>` to `Option<bool>`
   = note: expected enum `Option<bool>`
              found enum `Option<u8>`
